--- a/base.css
+++ b/base.css
@@ -25,6 +25,13 @@ li {
     overflow: hidden;
 }
 
+.clearfix::before,
+.clearfix::after {
+    content: "";
+    display: block;
+    clear: both;
+}
+
 .left {
     position: relative;
     float: left;
@@ -48,4 +55,8 @@ a {
 
 a:hover {
     text-decoration: underline;
+}
+
+.clearing {
+    clear: both;
 }
