--- a/base.css
+++ b/base.css
@@ -16,6 +16,7 @@ html {
 
 li {
     list-style: none;
+    margin-left: -25px;
 }
 
 .main-section {
@@ -41,7 +42,7 @@ table,
 th,
 td,
 .libox {
-    border: 1px solid black;
+    border: 2px solid black;
 }
 
 .ovrflo {
