Nav bar flipped and removed margins

--- a/base3.css
+++ b/base3.css
@@ -17,9 +17,14 @@ header {
 .btn {
     float: left;
     padding: 5px 15px 5px 15px;
-    border-radius: 7px 7px 0 0;
+    border-radius: 0 0 10px 10px;
     background: darkblue;
     color: white;
+    text-align: center;
+}
+
+.active {
+    background: green;
 }
 
 main {
@@ -55,6 +60,8 @@ li {
     content: "";
     display: block;
     clear: both;
+    padding: 0;
+    margin: 0
 }
 
 .left {
