--- a/base3.css
+++ b/base3.css
@@ -60,8 +60,11 @@ li {
     content: "";
     display: block;
     clear: both;
+}
+
+.clearfix {
     padding: 0;
-    margin: 0
+    margin: 0;
 }
 
 .left {
