--- a/base.css
+++ b/base.css
@@ -81,6 +81,12 @@ a:hover {
     padding: 3px;
 }
 
+.box-medium {
+    border: 2px solid black;
+    width: 150px;
+    padding: 3px;
+}
+
 .box-large {
     border: 2px solid black;
     width: 800px;
