--- a/base3.css
+++ b/base3.css
@@ -107,6 +107,12 @@ a:hover {
     padding: 3px;
 }
 
+.box-medium {
+    border: 2px solid black;
+    width: 300px;
+    padding: 3px;
+}
+
 .box-large {
     border: 2px solid black;
     width: 800px;
