--- a/css/base3.css
+++ b/css/base3.css
@@ -104,11 +104,20 @@ a:hover {
 .box-small {
     border: 2px solid black;
     width: 150px;
+    height: 200px;
+    padding: 3px;
+}
+
+.box-medium {
+    border: 2px solid black;
+    width: 300px;
+    height: 200px;
     padding: 3px;
 }
 
 .box-large {
     border: 2px solid black;
     width: 800px;
+    height: 200px;
     padding: 3px;
 }
