Beautifying header row

--- a/css/base3.css
+++ b/css/base3.css
@@ -124,5 +124,7 @@ a:hover {
 
 .headrow {
     height: auto;
-    margin: auto;
+    text-align: center;
+    color: yellow;
+    background: darkblue;
 }
