--- a/css/base3.css
+++ b/css/base3.css
@@ -29,7 +29,7 @@ header {
 
 main {
     margin: auto;
-    width: auto;
+    width: 80%;
     position: relative;
     padding: 2px;
     overflow: auto;
@@ -103,7 +103,7 @@ a:hover {
 
 .box-small {
     border: 2px solid black;
-    width: 150px;
+    width: 130px;
     height: 75px;
     padding: 3px;
 }
